--- a/index.html
+++ b/index.html
@@ -10,20 +10,75 @@
     <main class="app">
       <header class="toolbar" aria-label="그림판 도구">
         <h1>Hun Paintboard</h1>
-        <label>
-          색상
-          <input id="colorPicker" type="color" value="#111111" />
-        </label>
-        <label>
-          굵기
-          <input id="sizeSlider" type="range" min="1" max="64" value="6" />
-          <span id="sizeValue">6px</span>
-        </label>
-        <button id="eraserButton" type="button">지우개</button>
-        <button id="undoButton" type="button">되돌리기</button>
-        <button id="clearButton" type="button">전체 지우기</button>
-        <button id="saveButton" type="button">PNG 저장</button>
+
+        <section class="tool-group" aria-label="그리기 도구">
+          <button class="tool-button active" data-tool="brush" type="button" title="브러시">
+            <span class="icon" aria-hidden="true">✎</span><span>브러시</span>
+          </button>
+          <button class="tool-button" data-tool="line" type="button" title="직선">
+            <span class="icon" aria-hidden="true">╱</span><span>직선</span>
+          </button>
+          <button class="tool-button" data-tool="rect" type="button" title="사각형">
+            <span class="icon" aria-hidden="true">▭</span><span>사각형</span>
+          </button>
+          <button class="tool-button" data-tool="circle" type="button" title="원">
+            <span class="icon" aria-hidden="true">◯</span><span>원</span>
+          </button>
+          <button class="tool-button" data-tool="triangle" type="button" title="삼각형">
+            <span class="icon" aria-hidden="true">△</span><span>삼각형</span>
+          </button>
+          <button class="tool-button" data-tool="star" type="button" title="별">
+            <span class="icon" aria-hidden="true">★</span><span>별</span>
+          </button>
+          <button class="tool-button" data-tool="eraser" type="button" title="지우개">
+            <span class="icon" aria-hidden="true">⌫</span><span>지우개</span>
+          </button>
+        </section>
+
+        <section class="control-group" aria-label="색상 설정">
+          <label class="picker-label">
+            <span>색상</span>
+            <input id="colorPicker" type="color" value="#111111" />
+          </label>
+          <div class="swatches" aria-label="자주 쓰는 색상">
+            <button class="swatch" data-color="#111111" style="--swatch:#111111" type="button" title="#111111"></button>
+            <button class="swatch" data-color="#ef4444" style="--swatch:#ef4444" type="button" title="#ef4444"></button>
+            <button class="swatch" data-color="#2563eb" style="--swatch:#2563eb" type="button" title="#2563eb"></button>
+            <button class="swatch" data-color="#10b981" style="--swatch:#10b981" type="button" title="#10b981"></button>
+            <button class="swatch" data-color="#f59e0b" style="--swatch:#f59e0b" type="button" title="#f59e0b"></button>
+          </div>
+        </section>
+
+        <section class="control-group" aria-label="선 굵기 설정">
+          <label class="picker-label">
+            <span>굵기</span>
+            <input id="sizeSlider" type="range" min="1" max="64" value="6" />
+            <strong id="sizeValue">6px</strong>
+          </label>
+        </section>
+
+        <section class="action-group" aria-label="편집 액션">
+          <button id="copyButton" type="button" title="Ctrl/Cmd+C">
+            <span class="icon" aria-hidden="true">⧉</span><span>복사</span>
+          </button>
+          <button id="pasteButton" type="button" title="Ctrl/Cmd+V">
+            <span class="icon" aria-hidden="true">⎘</span><span>붙여넣기</span>
+          </button>
+          <button id="undoButton" type="button" title="Ctrl/Cmd+Z">
+            <span class="icon" aria-hidden="true">↶</span><span>되돌리기</span>
+          </button>
+          <button id="clearButton" type="button">
+            <span class="icon" aria-hidden="true">⊘</span><span>전체 지우기</span>
+          </button>
+          <button id="saveButton" type="button">
+            <span class="icon" aria-hidden="true">⤓</span><span>PNG 저장</span>
+          </button>
+        </section>
+
+        <p class="shortcut-hint">단축키: Ctrl/Cmd + C 복사 · Ctrl/Cmd + V 붙여넣기 · Ctrl/Cmd + Z 되돌리기</p>
+        <p id="statusText" class="status" aria-live="polite"></p>
       </header>
+
       <section class="canvas-wrap">
         <canvas id="paintCanvas" aria-label="그림판 캔버스"></canvas>
       </section>
