--- a/index.html
+++ b/index.html
@@ -119,6 +119,11 @@
             </div>
           </div>
           <div id="layersList" class="layers-list"></div>
+          <div id="layerTextControls" class="layer-text-controls" hidden>
+            <label for="layerTextInput">텍스트 내용</label>
+            <input id="layerTextInput" type="text" placeholder="선택된 텍스트 레이어 내용을 수정" />
+            <button id="applyLayerTextButton" type="button">텍스트 적용</button>
+          </div>
         </aside>
       </section>
     </main>
