feat: add multi-select layer list and merge selected layers

--- a/index.html
+++ b/index.html
@@ -115,6 +115,7 @@
             <strong>레이어</strong>
             <div class="layers-actions">
               <button id="addLayerButton" type="button">+ 레이어</button>
+              <button id="mergeLayersButton" type="button">병합</button>
               <button id="deleteLayerButton" type="button">삭제</button>
             </div>
           </div>
